welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:36: error: unclosed comment
/*def hunt() {
^SlugSnail:3: error: Missing closing brace `}' assumed here
do{
^SlugSnail:12: error: expected class or object definition
def isFacingTrail(c:color):Boolean = {
^SlugSnail:26: error: expected class or object definition
def print() {baisseBrosse();leveBrosse()}
^