welcome.lessons.welcome.methods.slug.SlugSnail.scala.code
    def hunt(c:Color) {
do{
	if(isFacingTrail() == true){
		avance();print();
	}else{
		gauche();isFacingTrail();
	}	
}while(!estSurBiscuit);prendBiscuit();
}
   
def isFacingTrail(c:color):Boolean = {
var test = false;
if(!estFaceMur){
	avance();
	if(getCouleurSol() == Color.c){
		test = true;recule();
	}else{
		test = false;recule();
	}
}else{
		test = false;
}
 return test;   
}     
def print() {baisseBrosse();leveBrosse()}









/*def hunt() {
do{
	if(isFacingTrail() == true){
		avance();print();
	}else{
		gauche();isFacingTrail();
	}	
}while(!estSurBiscuit);prendBiscuit();
}
def isFacingTrail():Boolean = {
var test = false;
if(!estFaceMur){
	avance();
	if(getCouleurSol() == Color.green){
		test = true;recule();
	}else{
		test = false;recule();
	}
}else{
		test = false;
}
 return test;   
}     
def print() {baisseBrosse();leveBrosse()}